package dev.fredpena.designpattern.structural.composite;

/**
 * @author me@fredpena.dev
 * @created 19/09/2025  - 09:20
 */
public interface Graphic {
    void move(int x, int y);

    void draw();
}
